<resources>
    <string name="app_name">#UnaSolaFuerza</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="accept">Aceptar</string>
    <string name="name">Nombres</string>
    <string name="lname">Apellidos</string>
    <string name="direction">Dirección</string>
    <string name="email">Email</string>
    <string name="register">Registrar</string>
    <string name="user">User</string>
    <string name="ubication">Ubicacion</string>
    <string name="message">Ingrese el Mensaje</string>
    <string name="password">Password</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="save">Guardar</string>
    <string name="url_private">http://10.24.9.78:1010/sigem/api/</string>
    <string name="url_public">http://www.ocrm.gob.pe/sigem/api/</string>
    <string name="title_activity_evento_detalle">EventoDetalleActivity</string>
    <string name="title_activity_centro_acopio">CentroAcopioActivity</string>
    <string name="title_activity_how_help">HowHelpActivity</string>
    <string name="title_activity_ranking_empresas">RankingEmpresasActivity</string>
    <string name="title_activity_live_streaming">LiveStreamingActivity</string>
</resources>
