<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.codehans.usuarioscoen.NuevaAlertaFragment">

    <!-- TODO: RECUERDA QUE CADA VEZ QUE MODIFIQUES EL TIPO DE LAYOUT
     TODO: DEBES DE CAMBIAR DICHO TIPO EN EL CODIGO -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtV_Ubicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:drawableEnd="@drawable/ic_location_on_black_24dp"
            android:drawableRight="@drawable/ic_location_on_black_24dp"
            android:drawableTint="@color/colorPrimaryDark"
            android:hint="@string/ubication" />

       <!-- <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/cmbx_TipoE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimaryDark" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/cmbx_TipoC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimaryDark" /> -->

        <EditText
            android:id="@+id/edtV_Message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:drawableEnd="@drawable/ic_message_black_24dp"
            android:drawableRight="@drawable/ic_message_black_24dp"
            android:drawableTint="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/message"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btn_accept_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="80dp"
            android:background="@color/colorPrimaryDark"
            android:clickable="true"
            android:text="@string/accept"
            android:textColor="@android:color/white" />


    </LinearLayout>

</RelativeLayout>
